@@ -1,6 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.335 2008-09-10 18:29:09 remko Exp $
+	$Id: ChangeLog,v 1.336 2008-09-20 23:08:06 guru Exp $
 -----------------------------------------------------------------------------------------
+2008-09-20	pwessel
+	* gmt_support.c:	Function GMT_get_arc did not check for division by zero.
+				The -Gx<file>:<radius>[unit] in grdcontour passed the entire
+				argument as the file name.
 2008-09-10	remko
 	* gmt_nc.c:		Coordinate arrays are now always double precision.
 
